# almide

./: .codopsy-baseline.json  .codopsyrc.json  .cursorrules  .gitignore  .gitmodules  CHANGELOG.md  CHEATSHEET.md  CLAUDE.md  Cargo.toml  ISSUE_DRAFT_bare_type_names.md  ISSUE_DRAFT_wasm_rc_option_fallback.md  Makefile  README.md  ROADMAP.md  SPEC.md  _wasm_test_tmp.txt  build.rs  codopsy-report.json  lefthook.yml  libp_test.rmeta  llms.txt  pbcopy  repro2.cwasm  test_wasm_fs.almd
crates/almide-base/: CLAUDE.md  Cargo.toml
crates/almide-base/src/: diagnostic.rs  intern.rs  lib.rs  profile.rs  span.rs
crates/almide-codegen/: CLAUDE.md  Cargo.toml  build.rs  rt-oracle-registry.toml
crates/almide-codegen/buildscript/: arg_transforms_gen.rs  fusion_parse.rs  fusion_rules.rs  matrix_desugar.rs  runtime_registry.rs  stdlib_ret_ty_gen.rs
crates/almide-codegen/src/: annotations.rs  lib.rs  pass.rs  pass_alias_cow.rs  pass_anf.rs  pass_auto_parallel.rs  pass_borrow_inference.rs  pass_borrow_inference_p2.rs  pass_borrow_inference_p3.rs  pass_box_deref.rs  pass_builtin_lowering.rs  pass_canonicalize.rs  pass_capture_clone.rs  pass_clone.rs  pass_closure_conversion.rs  pass_concretize_types.rs  pass_concretize_types_p2.rs  pass_concretize_types_p3.rs  pass_concretize_types_p4.rs  pass_concretize_types_p5.rs  pass_const_fold.rs  pass_effect_inference.rs  pass_egg_saturation.rs  pass_fan_lowering.rs  pass_globalize_closure_ids.rs  pass_intrinsic_lowering.rs  pass_ir_link_flatten.rs  pass_lambda_type_resolve.rs  pass_licm.rs  pass_licm_p2.rs  pass_licm_p3.rs  pass_list_pattern.rs  pass_match_lowering.rs  pass_match_subject.rs  pass_matrix_fusion.rs  pass_matrix_fusion_rules.rs  pass_matrix_shape_spec.rs  pass_mut_param_lowering.rs  pass_normalize_runtime_calls.rs  pass_pattern_literal_guard.rs  (+23 more)
crates/almide-codegen/src/emit_wasm/: calls.rs  calls_bytes.rs  calls_bytes_p2.rs  calls_bytes_p3.rs  calls_bytes_p4.rs  calls_bytes_p5.rs  calls_datetime.rs  calls_env.rs  calls_fs.rs  calls_fs_p2.rs  calls_fs_p3.rs  calls_fs_p4.rs  calls_http.rs  calls_io.rs  calls_lambda.rs  calls_list.rs  calls_list_closure.rs  calls_list_closure2.rs  calls_list_closure2_p2.rs  calls_list_closure2_p3.rs  calls_list_closure2_p4.rs  calls_list_closure2_p5.rs  calls_list_closure_p2.rs  calls_list_helpers.rs  calls_list_helpers_p2.rs  calls_list_helpers_p3.rs  calls_list_p2.rs  calls_list_p3.rs  calls_map.rs  calls_map_closure.rs  calls_map_p2.rs  calls_map_p3.rs  calls_matrix.rs  calls_matrix_p2.rs  calls_matrix_p3.rs  calls_matrix_p4.rs  (+74 more)
crates/almide-dialect/: Cargo.toml
crates/almide-dialect/src/: dump.rs  emit_llvm.rs  emit_rust.rs  lib.rs  lower.rs  ops.rs  types.rs  verify.rs
crates/almide-egg-lab/: Cargo.toml  README.md  build.rs
crates/almide-egg-lab/buildscript/: egg_rules.rs
crates/almide-egg-lab/src/: bridge.rs  bridge_p2.rs  bridge_p3.rs  lib.rs
crates/almide-egg-lab/tests/: bridge_test.rs
crates/almide-frontend/: CLAUDE.md  Cargo.toml  build.rs
crates/almide-frontend/buildscript/: stdlib_codegen.rs
crates/almide-frontend/src/: bundled_sigs.rs  import_table.rs  ir_link.rs  lib.rs  stdlib.rs  type_env.rs  types.rs
crates/almide-interp/: CLAUDE.md  Cargo.toml  interp-abstain-ledger.txt
crates/almide-interp/src/: bridge.rs  dispatch.rs  env.rs  eval.rs  eval_p2.rs  eval_p3.rs  hofs.rs  hofs_p2.rs  lib.rs  value.rs
crates/almide-interp/tests/: eval_test.rs  interp_cross_target_test.rs
crates/almide-ir/: CLAUDE.md  Cargo.toml
crates/almide-ir/src/: annotations.rs  effect.rs  fold.rs  free_vars.rs  lib.rs  lib_p2.rs  mut_param.rs  result.rs  substitute.rs  top_let_storage.rs  use_count.rs  verify.rs  verify_p2.rs  visit.rs  visit_mut.rs  wasm_repr.rs
crates/almide-kernel/: Cargo.toml  README.md
crates/almide-kernel/examples/: bench.rs  bench_bridge.rs  bench_gelu.rs  bench_linear.rs  bench_matmul.rs  bench_matrix.rs  bench_q1_0.rs  bench_q1_0_packed.rs  bench_scale.rs  bench_silu.rs  bench_softmax.rs
crates/almide-kernel/src/: bridge.rs  gelu.rs  lib.rs  matmul.rs  q1_0.rs  q1_0_packed.rs  scale.rs  silu.rs  softmax.rs  transpose.rs  transpose_f64.rs
crates/almide-lang/: CLAUDE.md  Cargo.toml
crates/almide-lang/src/: lexer.rs  lib.rs  stdlib_info.rs
crates/almide-mir/: Cargo.toml
crates/almide-mir/examples/: classify_corpus.rs  emit_cert.rs  emit_cert_from_source.rs  probe_native.rs  render_program.rs
crates/almide-mir/src/: alias_safety.rs  certificate.rs  certificate_b.rs  certificate_c.rs  certificate_p2.rs  concat_to_append.rs  coown_names.rs  lib.rs  lib_b.rs  lib_c.rs  lib_p2.rs  lower.rs  pipeline.rs  pipeline_b.rs  pipeline_c.rs  purity.rs  region_alloc.rs  region_compact.rs  render_native.rs  render_native_b.rs  render_rust.rs  render_wasm.rs  render_wasm_b.rs  render_wasm_bce.rs  render_wasm_c.rs  render_wasm_dce.rs  render_wasm_p2.rs  render_wasm_p2_b.rs  render_wasm_p3.rs  render_wasm_peephole.rs  scalar_call_inline.rs  translation_validation.rs
crates/almide-optimize/: CLAUDE.md  Cargo.toml
crates/almide-optimize/src/: lib.rs
crates/almide-tools/: CLAUDE.md  Cargo.toml
crates/almide-tools/src/: almdi.rs  fmt.rs  fmt_p2.rs  fmt_p3.rs  interface.rs  lib.rs
crates/almide-types/: CLAUDE.md  Cargo.toml
crates/almide-types/src/: lib.rs  stdlib_info.rs
runtime/rs/: Cargo.toml  build.rs
runtime/rs/burn/: matrix_burn.rs  matrix_burn_p2.rs  matrix_burn_p3.rs  matrix_burn_p4.rs
runtime/rs/src/: base64.rs  bytes.rs  crypto.rs  datetime.rs  env.rs  error.rs  fan.rs  float.rs  fs.rs  hex.rs  http.rs  int.rs  io.rs  json.rs  lib.rs  libm.rs  libm_p2.rs  libm_p3.rs  libm_p4.rs  list.rs  log.rs  map.rs  math.rs  matrix.rs  matrix_p2.rs  net.rs  option.rs  process.rs  random.rs  regex.rs  result.rs  set.rs  sse.rs  string.rs  testing.rs  uuid.rs  value.rs  zlib.rs
tools/wasmgen-harness/: Cargo.toml
tools/wasmgen-harness-uu/: Cargo.toml
tools/wasmgen-harness-uu/src/: lib.rs
tools/wasmgen-harness/src/: main.rs
tools/xtarget-fuzz/: .gitignore  Cargo.toml  README.md
tools/xtarget-fuzz/src/: findings.rs  main.rs  metamorph.rs  minimize.rs  rng.rs
(+3543 files in other folders)
