[workspace]
members = [".", "crates/almide-base", "crates/almide-syntax", "crates/almide-types", "crates/almide-lang", "crates/almide-ir", "crates/almide-codegen", "crates/almide-optimize", "crates/almide-frontend", "crates/almide-tools"]
resolver = "3"

[package]
name = "almide"
version = "0.13.1"
edition = "2024"
license = "MIT OR Apache-2.0"

[dependencies]
almide-base = { path = "crates/almide-base" }
almide-lang = { path = "crates/almide-lang" }
almide-ir = { path = "crates/almide-ir" }
almide-codegen = { path = "crates/almide-codegen" }
almide-tools = { path = "crates/almide-tools" }
almide-optimize = { path = "crates/almide-optimize" }
almide-frontend = { path = "crates/almide-frontend" }
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
semver = "1"
toml = "0.8"
wasm-encoder = "0.225"
lasso = { version = "0.7", features = ["multi-threaded"] }

[dev-dependencies]
proptest = "1"
insta = "1"

