[workspace]
members = [".", "crates/almide-base", "crates/almide-syntax", "crates/almide-types", "crates/almide-lang", "crates/almide-ir", "crates/almide-dialect", "crates/almide-codegen", "crates/almide-optimize", "crates/almide-frontend", "crates/almide-interp", "crates/almide-tools", "crates/almide-egg-lab"]
resolver = "3"
exclude = ["research/benchmark/stdlib/rust_wasm_compare", "tools/wasmgen-harness", "tools/wasmgen-harness-uu", "tools/xtarget-fuzz"]

[package]
name = "almide"
version = "0.26.5"
edition = "2024"
license = "MIT OR Apache-2.0"

[dependencies]
almide-base = { path = "crates/almide-base" }
almide-lang = { path = "crates/almide-lang" }
almide-ir = { path = "crates/almide-ir" }
almide-codegen = { path = "crates/almide-codegen" }
almide-tools = { path = "crates/almide-tools" }
almide-optimize = { path = "crates/almide-optimize" }
almide-frontend = { path = "crates/almide-frontend" }
almide-dialect = { path = "crates/almide-dialect" }
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
semver = "1"
toml = "0.8"
wasm-encoder = "0.225"
lasso = { version = "0.7", features = ["multi-threaded"] }
lsp-server = "0.7"
lsp-types = "0.97"
# Advisory cross-process file lock (flock) for the shared build scratch
# dirs: serializes concurrent `almide run`/`build` invocations that share
# /tmp/almide-run's single src/main.rs + target/. Already present in the
# dependency tree transitively; used only under cfg(unix).
[target.'cfg(unix)'.dependencies]
libc = "0.2"


[dev-dependencies]
proptest = "1"
insta = "1"
tempfile = "3"

