[workspace]
members = [".", "crates/almide-base", "crates/almide-syntax", "crates/almide-types", "crates/almide-lang", "crates/almide-ir", "crates/almide-mir", "crates/almide-dialect", "crates/almide-codegen", "crates/almide-optimize", "crates/almide-frontend", "crates/almide-interp", "crates/almide-tools", "crates/almide-egg-lab"]
resolver = "3"
exclude = ["crates/almide-kernel", "research/benchmark/stdlib/rust_wasm_compare", "tools/wasmgen-harness", "tools/wasmgen-harness-uu", "tools/xtarget-fuzz"]

[package]
name = "almide"
version = "0.28.6"
edition = "2024"
license = "MIT OR Apache-2.0"

[dependencies]
almide-base = { path = "crates/almide-base" }
almide-lang = { path = "crates/almide-lang" }
almide-ir = { path = "crates/almide-ir" }
almide-codegen = { path = "crates/almide-codegen" }
almide-tools = { path = "crates/almide-tools" }
almide-optimize = { path = "crates/almide-optimize" }
almide-interp = { path = "crates/almide-interp" }
almide-frontend = { path = "crates/almide-frontend" }
almide-dialect = { path = "crates/almide-dialect" }
# v1 MIR trust-spine — the opt-in `--verified` wasm codegen path (pipeline::try_render_wasm_source),
# tried before v0 codegen and byte-identical to it where it lowers; v0 fallback on wall. Acyclic:
# almide-mir keeps `almide` only as a DEV-dependency, so this edge does not cycle.
almide-mir = { path = "crates/almide-mir" }
# WAT (text) → wasm bytes: the v1 renderer emits WAT; the CLI assembles it to a module.
wat = "1"
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
semver = "1"
toml = "1.1"
wasm-encoder = "0.252"
lasso = { version = "0.7", features = ["multi-threaded"] }
lsp-server = "0.9"
lsp-types = "0.97"

# Cross-platform advisory file lock (flock / LockFileEx) for the shared build
# scratch dir (see BuildDirLock) — lets CI run the suite in parallel on every
# host OS. Excluded on wasm32 (the determinism harness target), where fs2 has
# no backing OS lock and the compiler never spawns build subprocesses.
[target.'cfg(any(unix, windows))'.dependencies]
fs2 = "0.4"

[dev-dependencies]
proptest = "1"
insta = "1"
tempfile = "3"

