[package]
name = "almide-base"
version = "0.11.2"
edition = "2024"
license = "MIT OR Apache-2.0"
description = "Foundational types for the Almide compiler (Sym, Span, Diagnostic)"

[dependencies]
lasso = { version = "0.7", features = ["multi-threaded"] }
serde = { version = "1", features = ["derive"] }
