[package]
name = "almide-codegen"
version = "0.12.2"
edition = "2024"
license = "MIT OR Apache-2.0"
description = "Almide code generation: nanopass pipeline, walker, WASM emit"

[dependencies]
almide-base = { path = "../almide-base" }
almide-lang = { path = "../almide-lang" }
almide-ir = { path = "../almide-ir" }
almide-egg-lab = { path = "../almide-egg-lab" }
egg = "0.11"
wasm-encoder = "0.252"
wasmparser = "0.252"
toml = "1.1"
serde_json = "1"

[dev-dependencies]
proptest = "1"

[build-dependencies]
toml = "1.1"
serde = { version = "1", features = ["derive"] }
