[package]
name = "almide-dialect"
version = "0.16.0"
edition = "2024"
license = "MIT OR Apache-2.0"
description = "Almide MLIR dialect schema (pure-Rust, FFI-free)"

[dependencies]
almide-base = { path = "../almide-base" }
almide-lang = { path = "../almide-lang" }
almide-ir = { path = "../almide-ir" }
