[package]
name = "almide-dialect"
version = "0.16.0"
edition = "2024"
license = "MIT OR Apache-2.0"
description = "Almide MLIR dialect schema (pure-Rust, FFI-free)"

[dependencies]
almide-base = { path = "../almide-base" }
almide-lang = { path = "../almide-lang" }
almide-ir = { path = "../almide-ir" }
inkwell = { git = "https://github.com/TheDan64/inkwell", features = ["llvm22-1"], optional = true }
llvm-sys = { version = "221", optional = true }
either = "1"

[features]
default = []
llvm = ["inkwell", "llvm-sys"]
