[package]
name = "almide-ir"
version = "0.12.2"
edition = "2024"
license = "MIT OR Apache-2.0"
description = "Almide typed intermediate representation (IR)"

[dependencies]
almide-base = { path = "../almide-base" }
almide-lang = { path = "../almide-lang" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
