[package]
name = "almide-kernel"
version = "0.1.0"
edition = "2021"
description = "Verified SIMD numeric kernels for Almide — Rust ports of Wyve-proven kernels, differential-tested bitwise-exact"

# almide-kernel is `exclude`d from the parent Almide workspace, NOT a member:
# as a member it would drag `almide build`'s generated project into the workspace
# (via almide_rt's path dep), stripping its [profile.dev] and panicking the
# wrapping-shift int rotate (see PR #427). It still builds fine as almide_rt's
# path dependency. The empty [workspace] below makes it its own root so its
# differential tests run directly (cargo test --manifest-path ...) — e.g. on real
# ARM in CI to execute the NEON paths, which only cross-built before. Zero-dep.
[workspace]
