[package]
name = "almide-lang"
version = "0.10.5"
edition = "2024"
license = "MIT OR Apache-2.0"
description = "Almide language definitions: AST, type system, lexer, and parser"

[dependencies]
almide-base = { path = "../almide-base" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
