[package]
name = "almide-lang"
version = "0.12.2"
edition = "2024"
license = "MIT OR Apache-2.0"
description = "Almide language definitions: re-exports almide-syntax + almide-types"

[dependencies]
almide-base = { path = "../almide-base" }
almide-syntax = { path = "../almide-syntax" }
almide-types = { path = "../almide-types" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
