[package]
name = "almide-types"
version = "0.12.2"
edition = "2024"
license = "MIT OR Apache-2.0"
description = "Almide type system: Ty, unification, type constructors, stdlib info"

[dependencies]
almide-base = { path = "../almide-base" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
