# Browser-ABI determinism harness: the SAME compile_to_wasm the playground uses,
# built to wasm32-unknown-unknown (the actual browser target) via wasm-bindgen.
# Run by scripts/check-browser-determinism.sh under node, it (1) must not panic
# (wasm32-unknown-unknown lacks std::time etc.) and (2) must emit byte-identical
# output to the native compiler. Standalone (own workspace).
[workspace]

[package]
name = "wasmgen-harness-uu"
version = "0.0.0"
edition = "2021"
publish = false

[lib]
crate-type = ["cdylib"]

[dependencies]
almide-mir = { path = "../../crates/almide-mir" }
wat = "1"
wasm-bindgen = "0.2"

[profile.release]
opt-level = 2

# Disable wasm-pack's post-build wasm-opt pass on the HARNESS binary. The gate
# verifies the bytes the compiler EMITS, not the harness's own size/speed — and
# the wasm-opt binary wasm-pack pins (cached under ~/.cache/.wasm-pack) is old
# enough to SIGSEGV on this module (hit on CI 2026-06-06 after rt_libm landed;
# a current binaryen handles it fine). Skipping it removes the irrelevant,
# version-fragile step entirely.
[package.metadata.wasm-pack.profile.release]
wasm-opt = false
